--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guitar-theory-visualizer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Guitar theory visualizer application",
   "main": "dist/bundle.js",
   "scripts": {
@@ -26,7 +26,8 @@
     "@types/jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "tonal": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
